# ts_js_interop

./: .bazelrc  BUILD.bazel  LICENSE  README.md  WORKSPACE
src/: BUILD.bazel  b.ts
