load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@aspect_rules_swc//swc:defs.bzl", "swc")
load("@bazel_skylib//lib:partial.bzl", "partial")
load("@aspect_rules_esbuild//esbuild:defs.bzl", "esbuild")

ts_project(
    name = "src",
    srcs = [
        "a.js",
        "b.ts",
    ],
    allow_js = True,
    declaration = True,
    emit_declaration_only = True,
    resolve_json_module = True,
    transpiler = partial.make(
        swc,
        swcrc = "//:.swcrc",
    ),
    tsconfig = "//:tsconfig",
)

esbuild(
    name = "example_bundle",
    config = {
        "alias": {"wkspc": "./"},
    },
    entry_point = "b.js",
    deps = [
        ":src",
    ],
)
